<resources>
    <string name="app_name">Fieldwork</string>
    <string name="button_addHillfort">Add</string>
    <string name="button_location">Set Location</string>
    <string name="button_addImage">Add Image</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="title_activity_login"> Signup/Login</string>
    <string name="hint_hillfortTitle">Hillfort Name</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="hint_userName">Name</string>
    <string name="hint_userEmail">Email</string>
    <string name="hint_userPassword">Password</string>
    <string name="hint_confirmUserPassword">Confirm Password</string>
    <string name="hint_hillfort_additional_notes">Additional Notes</string>
    <string name="menu_addHillfort">Add New Hillfort</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_saveHillfort">Save</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_favorites">View Favorites</string>
    <string name="menu_showList">Show List</string>
    <string name="enter_hillfort_Name">Please enter a Hillfort Name</string>
    <string name="save_hillfort">Save Hillfort</string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Change hillfort image</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_signup_name">Name must not be empty</string>
    <string name="error_signup_email">Email must not be empty and must be valid</string>
    <string name="error_signup_password">Password must not be empty</string>
    <string name="error_signup_confirm">Passwords must match</string>
    <string name="error_login">Email or Password incorrect</string>
    <string name="login_success">Login Successful</string>
    <string name="signup_success">Signup Successful</string>
    <string name="logged_out">You have been logged out</string>
    <string name="checkbox_visited">Visited</string>
    <string name="settings_change_password">Change password</string>
    <string name="password_new">New password</string>
    <string name="password_new_confirm">Confirm new password</string>
    <string name="password_change_success">Password changed successfully</string>
    <string name="current_user" formatted="true">Current User: %1$s%%</string>
    <string name="current_user_email" formatted="true">Email: %1$s%%</string>
    <string name="total_hillforts" formatted="true">Total Hillforts: %1$s%%</string>
    <string name="number_visited" formatted="true">Number of Hillforts visited: %1$s%%</string>
    <string name="date_visited" formatted="true">Last Visited: %1$s%%</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_hillfort_maps">Map of All Hillforts</string>
    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillforts</string>
    <string name="title_activity_edit_location">Hillforts</string>
    <string name="rate_hillfort">Rate Hillfort</string>
    <string name="rate_confirm">Confirm Rating</string>
    <string name="search_hint">Search Hillforts</string>
    <string name="take_photo">Take Photo</string>
    <string name="share">Share</string>
</resources>
